tools: disable stub tester if no introspection enabled
  TEST: test-stub...
    /MM/stub/modem/interface: dbus-daemon[48020]: [session uid=0 pid=48020] Activating service name='org.freedesktop.ModemManager1' requested by ':1.0' (uid=0 pid=48005 comm="/builds/mobile-broadband/ModemManager/tools/tests/")
  Traceback (most recent call last):
    File "/builds/mobile-broadband/ModemManager/tools/test-modemmanager-service.py", line 7, in <module>
      gi.require_version('ModemManager', '1.0')
    File "/usr/lib/python3/dist-packages/gi/__init__.py", line 129, in require_version
      raise ValueError('Namespace %s not available' % namespace)
  ValueError: Namespace ModemManager not available
  dbus-daemon[48020]: [session uid=0 pid=48020] Activated service 'org.freedesktop.ModemManager1' failed: Process org.freedesktop.ModemManager1 exited with status 1

(cherry picked from commit 7b7bbdd999d00446966f100212bc469970e769a3)

--- a/tools/tests/Makefile.am
+++ b/tools/tests/Makefile.am
@@ -31,7 +31,10 @@ test_stub_CPPFLAGS = \
 	-DTEST_SERVICES=\""$(abs_top_builddir)/tools/tests/services"\" \
 	$(NULL)
 
+# only run the test if introspection was enabled
+if HAVE_INTROSPECTION
 TEST_PROGS += $(noinst_PROGRAMS)
+endif
 
 test-wrapper.sh: test-wrapper.sh.in
 	@sed \
