service: Fix Mobile Data on EG25
This allows mobile data to work on the EG25 (and probably other modems).

--- a/data/ModemManager.service.in
+++ b/data/ModemManager.service.in
@@ -9,7 +9,7 @@ BusName=org.freedesktop.ModemManager1
 ExecStart=@sbindir@/ModemManager
 StandardError=null
 Restart=on-abort
-CapabilityBoundingSet=CAP_SYS_ADMIN
+CapabilityBoundingSet=CAP_SYS_ADMIN CAP_NET_ADMIN
 ProtectSystem=true
 ProtectHome=true
 PrivateTmp=true
