service: add QIPCRTR address family
With the recently added support for modems using QRTR, ModemManager
needs to have access to the corresponding address family so it can
interact with the modem.

Signed-off-by: Arnaud Ferraris <arnaud.ferraris@collabora.com>

--- a/data/ModemManager.service.in
+++ b/data/ModemManager.service.in
@@ -13,7 +13,7 @@ CapabilityBoundingSet=CAP_SYS_ADMIN CAP_NET_ADMIN
 ProtectSystem=true
 ProtectHome=true
 PrivateTmp=true
-RestrictAddressFamilies=AF_NETLINK AF_UNIX
+RestrictAddressFamilies=AF_NETLINK AF_UNIX AF_QIPCRTR
 NoNewPrivileges=true
 User=root
 
