iface-modem-sar: new `MMIfaceModemSar` interface

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -361,6 +361,8 @@ ModemManager_SOURCES = \
 	mm-iface-modem-time.c \
 	mm-iface-modem-firmware.h \
 	mm-iface-modem-firmware.c \
+	mm-iface-modem-sar.h \
+	mm-iface-modem-sar.c \
 	mm-iface-modem-signal.h \
 	mm-iface-modem-signal.c \
 	mm-iface-modem-oma.h \
