ci: build with artifacts only in master and tags

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -199,9 +199,7 @@ build-default:
   - .fdo.distribution-image@ubuntu
   - .common_variables
   only:
-    - master
     - merge_requests
-    - tags
     - schedules
   script:
     - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libmbim.git
@@ -231,6 +229,17 @@ build-default:
     - make check
     - make install
     - make distcheck
+
+build-default-artifacts:
+  stage: build
+  extends:
+  - .fdo.distribution-image@ubuntu
+  - .common_variables
+  only:
+    - master
+    - tags
+  script:
+    - !reference [build-default, script]
     - sha256sum $CI_PROJECT_NAME-*.tar.xz | awk '{print $1;}' > pkg_hash.txt
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_COMMIT_SHORT_SHA"
