quectel: add support for EM120/160 PCIe modules

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -1276,6 +1276,12 @@ libmm_plugin_quectel_la_SOURCES += \
 	quectel/mm-broadband-modem-qmi-quectel.h \
 	$(NULL)
 endif
+if WITH_MBIM
+libmm_plugin_quectel_la_SOURCES += \
+	quectel/mm-broadband-modem-mbim-quectel.c \
+	quectel/mm-broadband-modem-mbim-quectel.h \
+	$(NULL)
+endif
 libmm_plugin_quectel_la_CPPFLAGS = \
 	$(PLUGIN_COMMON_COMPILER_FLAGS) \
 	-DMM_MODULE_NAME=\"quectel\" \
