utils: remove custom g_ptr_array_find_with_equal_func()
This was required when building with GLib < 2.54, but we now require
2.56 as minimum, so it is no longer needed.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -306,7 +306,7 @@ ModemManager_SOURCES = \
 	main.c \
 	mm-context.h \
 	mm-context.c \
-	mm-utils.h mm-utils.c \
+	mm-utils.h \
 	mm-private-boxed-types.h \
 	mm-private-boxed-types.c \
 	mm-auth-provider.h \
