option: disable preferred networks management in custom SIM object
It's been observed that running CPOL? would completely break the AT
port of the modules like the GIO225.

Fully disable this feature in the whole option and option-hso plugins,
by creating a new custom SIM object with the features disabled
completely, and setup as a new shared interface object.

Fixes https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/404

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -228,6 +228,10 @@ if WITH_SHARED_OPTION
 pkglib_LTLIBRARIES += libmm-shared-option.la
 libmm_shared_option_la_SOURCES = \
 	option/mm-shared.c \
+	option/mm-shared-option.h \
+	option/mm-shared-option.c \
+	option/mm-sim-option.c \
+	option/mm-sim-option.h \
 	option/mm-broadband-modem-option.c \
 	option/mm-broadband-modem-option.h \
 	$(NULL)
