build: Rename template files
The template files in the `build-aux` directory used in enums sources
and headers generation use the `{$name}-template.[ch]` pattern.
However, the examples in the official guide[0] and usually GNOME and
Freedesktop packages use the `{$name}.[ch].template` pattern.

Due to this, the name of the template files and build commands have
been changed.

[0] https://developer.gnome.org/gobject/stable/glib-mkenums.html

--- a/build-aux/Makefile.am
+++ b/build-aux/Makefile.am
@@ -1,8 +1,8 @@
 
 EXTRA_DIST = \
 	header-generator.xsl \
-	mm-enums-template.h \
-	mm-enums-template.c \
-	mm-errors-template.h \
-	mm-errors-template.c \
-	mm-errors-quarks-template.c
+	mm-enums-types.h.template \
+	mm-enums-types.c.template \
+	mm-errors-types.h.template \
+	mm-errors-types.c.template \
+	mm-errors-quarks.c.template
