foxconn: update T77W968 carrier mapping table

--- a/plugins/foxconn/mm-foxconn-t77w968-carrier-mapping.conf
+++ b/plugins/foxconn/mm-foxconn-t77w968-carrier-mapping.conf
@@ -277,5 +277,23 @@
 44164=SBM
 44165=SBM
 
+# Deutsche Telekom
+20201=DT
+20416=DT
+20420=DT
+21630=DT
+21901=DT
+22603=DT
+22606=DT
+23001=DT
+23102=DT
+23203=DT
+23207=DT
+26002=DT
+26201=DT
+27601=DT
+29401=DT
+29702=DT
+
 # Others
 generic=GCF
