foxconn: add T99W175 carrier mapping table

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -726,11 +726,15 @@ libmm_plugin_foxconn_la_LDFLAGS = $(PLUGIN_COMMON_LINKER_FLAGS)
 
 dist_udevrules_DATA += foxconn/77-mm-foxconn-port-types.rules
 
-dist_pkgdata_DATA += foxconn/mm-foxconn-t77w968-carrier-mapping.conf
+dist_pkgdata_DATA += \
+	foxconn/mm-foxconn-t77w968-carrier-mapping.conf \
+	foxconn/mm-foxconn-t99w175-carrier-mapping.conf \
+	$(NULL)
 
 AM_CFLAGS += \
 	-DTESTUDEVRULESDIR_FOXCONN=\"${srcdir}/foxconn\" \
-	-DTESTKEYFILE_FOXCONN=\"${srcdir}/foxconn/mm-foxconn-t77w968-carrier-mapping.conf\" \
+	-DTESTKEYFILE_FOXCONN_T77W968=\"${srcdir}/foxconn/mm-foxconn-t77w968-carrier-mapping.conf\" \
+	-DTESTKEYFILE_FOXCONN_T99W175=\"${srcdir}/foxconn/mm-foxconn-t99w175-carrier-mapping.conf\" \
 	$(NULL)
 
 endif
