examples: new SMS sending example in C using the sync API

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,1 +1,7 @@
-SUBDIRS = modem-watcher-python modem-watcher-javascript sms-python network-scan-python
+SUBDIRS = \
+	modem-watcher-python \
+	modem-watcher-javascript \
+	sms-python \
+	network-scan-python \
+	sms-c \
+	$(NULL)
