--- a/.gitignore
+++ b/.gitignore
@@ -180,5 +180,7 @@ Makefile.in
 /tools/tests/test-stub
 /tools/tests/test-wrapper.sh
 
+/examples/sms-c/sms-c-sync
+
 /ModemManager-*-coverage.info
 /ModemManager-*-coverage/
