build,meson: Make use of the summary function
Since meson 0.53 it has added a new function to summarize the build
configuration[0].

We changed the summary to make use of it.

[0] https://mesonbuild.com/Release-notes-for-0-53-0.html#add-a-new-summary-function

--- a/meson.build
+++ b/meson.build
@@ -10,7 +10,7 @@ project(
     'c_std=gnu89',
     'warning_level=2',
   ],
-  meson_version: '>= 0.50.0',
+  meson_version: '>= 0.53.0',
 )
 
 mm_name = meson.project_name()
@@ -377,77 +377,86 @@ configure_file(
   configuration: config_h,
 )
 
-output = '\n' + mm_name + ' ' + mm_version + '\n\n'
-output += '  Build\n'
-output += '    compiler:               ' + cc.get_id() + '\n'
-output += '    cflags:                 ' + ' '.join(cc_args) + '\n'
-output += '  System paths\n'
-output += '    prefix:                 ' + mm_prefix + '\n'
-output += '    D-Bus policy directory: ' + dbus_policy_dir + '\n'
-output += '    udev base directory:    ' + udev_udevdir + '\n'
-output += '    systemd unit directory: ' + systemd_systemdsystemunitdir + '\n\n'
-output += '  Features\n'
-output += '    udev:                   ' + enable_udev.to_string() + '\n'
-output += '    policykit:              ' + polkit + '\n'
-output += '    mbim:                   ' + enable_mbim.to_string() + '\n'
-output += '    qmi:                    ' + enable_qmi.to_string() + '\n'
-output += '    qrtr:                   ' + enable_qrtr.to_string() + '\n'
-output += '    systemd suspend/resume: ' + enable_systemd_suspend_resume.to_string() + '\n'
-output += '    systemd journal:        ' + enable_systemd_journal.to_string() + '\n'
-output += '    at command via dbus:    ' + enable_at_command_via_dbus.to_string() + '\n\n'
-output += '  Shared utils:\n'
-output += '    foxconn:                ' + enable_plugins_shared.contains('foxconn').to_string() + '\n'
-output += '    icera:                  ' + enable_plugins_shared.contains('icera').to_string() + '\n'
-output += '    novatel:                ' + enable_plugins_shared.contains('novatel').to_string() + '\n'
-output += '    option:                 ' + enable_plugins_shared.contains('option').to_string() + '\n'
-output += '    sierra:                 ' + enable_plugins_shared.contains('sierra').to_string() + '\n'
-output += '    telit:                  ' + enable_plugins_shared.contains('telit').to_string() + '\n'
-output += '    xmm:                    ' + enable_plugins_shared.contains('xmm').to_string() + '\n'
-output += '  Plugins:\n'
-output += '    altair-lte:             ' + enable_plugins.contains('altair-lte').to_string() + '\n'
-output += '    anydata:                ' + enable_plugins.contains('anydata').to_string() + '\n'
-output += '    broadmobi:              ' + enable_plugins.contains('broadmobi').to_string() + '\n'
-output += '    cinterion:              ' + enable_plugins.contains('cinterion').to_string() + '\n'
-output += '    dell:                   ' + enable_plugins.contains('dell').to_string() + '\n'
-output += '    dlink:                  ' + enable_plugins.contains('dlink').to_string() + '\n'
-output += '    fibocom:                ' + enable_plugins.contains('fibocom').to_string() + '\n'
-output += '    foxconn:                ' + enable_plugins.contains('foxconn').to_string() + '\n'
-output += '    generic:                ' + enable_plugins.contains('generic').to_string() + '\n'
-output += '    gosuncn:                ' + enable_plugins.contains('gosuncn').to_string() + '\n'
-output += '    haier:                  ' + enable_plugins.contains('haier').to_string() + '\n'
-output += '    huawei:                 ' + enable_plugins.contains('huawei').to_string() + '\n'
-output += '    iridium:                ' + enable_plugins.contains('iridium').to_string() + '\n'
-output += '    linktop:                ' + enable_plugins.contains('linktop').to_string() + '\n'
-output += '    longcheer:              ' + enable_plugins.contains('longcheer').to_string() + '\n'
-output += '    mbm:                    ' + enable_plugins.contains('mbm').to_string() + '\n'
-output += '    motorola:               ' + enable_plugins.contains('motorola').to_string() + '\n'
-output += '    mtk:                    ' + enable_plugins.contains('mtk').to_string() + '\n'
-output += '    nokia:                  ' + enable_plugins.contains('nokia').to_string() + '\n'
-output += '    nokia-icera:            ' + enable_plugins.contains('nokia-icera').to_string() + '\n'
-output += '    novatel:                ' + enable_plugins.contains('novatel').to_string() + '\n'
-output += '    novatel-lte:            ' + enable_plugins.contains('novatel-lte').to_string() + '\n'
-output += '    option:                 ' + enable_plugins.contains('option').to_string() + '\n'
-output += '    option-hso:             ' + enable_plugins.contains('option-hso').to_string() + '\n'
-output += '    pantech:                ' + enable_plugins.contains('pantech').to_string() + '\n'
-output += '    qcom-soc:               ' + enable_plugins.contains('qcom-soc').to_string() + '\n'
-output += '    quectel:                ' + enable_plugins.contains('quectel').to_string() + '\n'
-output += '    samsung:                ' + enable_plugins.contains('samsung').to_string() + '\n'
-output += '    sierra:                 ' + enable_plugins.contains('sierra').to_string() + '\n'
-output += '    sierra-legacy:          ' + enable_plugins.contains('sierra-legacy').to_string() + '\n'
-output += '    simtech:                ' + enable_plugins.contains('simtech').to_string() + '\n'
-output += '    telit:                  ' + enable_plugins.contains('telit').to_string() + '\n'
-output += '    thuraya:                ' + enable_plugins.contains('thuraya').to_string() + '\n'
-output += '    tplink:                 ' + enable_plugins.contains('tplink').to_string() + '\n'
-output += '    ublox:                  ' + enable_plugins.contains('ublox').to_string() + '\n'
-output += '    via:                    ' + enable_plugins.contains('via').to_string() + '\n'
-output += '    wavecom:                ' + enable_plugins.contains('wavecom').to_string() + '\n'
-output += '    x22x:                   ' + enable_plugins.contains('x22x').to_string() + '\n'
-output += '    zte:                    ' + enable_plugins.contains('zte').to_string() + '\n'
-output += '  Miscellaneous:\n'
-output += '    gobject introspection:  ' + enable_gir.to_string() + '\n'
-output += '    Man:                    ' + enable_man.to_string() + '\n'
-output += '    Documentation:          ' + enable_gtk_doc.to_string() + '\n'
-output += '    bash completion:        ' + enable_bash_completion.to_string() + '\n'
-output += '    vala bindings:          ' + enable_vapi.to_string() + '\n'
-output += '    code_coverage:          ' + get_option('b_coverage').to_string()
-message(output)
+summary({
+  'compiler': cc.get_id(),
+  'cflags': cc_args,
+}, section: 'Build')
+
+summary({
+  'prefix': mm_prefix,
+  'D-Bus policy directory': dbus_policy_dir,
+  'udev base directory': udev_udevdir,
+  'systemd user unit directory': systemd_systemdsystemunitdir,
+}, section: 'System paths')
+
+summary({
+  'udev': enable_udev,
+  'policykit': polkit,
+  'mbim': enable_mbim,
+  'qmi': enable_qmi,
+  'qrtr': enable_qrtr,
+  'systemd suspend/resume': enable_systemd_suspend_resume,
+  'systemd journal': enable_systemd_journal,
+  'at command via dbus': enable_at_command_via_dbus,
+}, section: 'Features')
+
+summary({
+  'foxconn': enable_plugins_shared.contains('foxconn'),
+  'icera': enable_plugins_shared.contains('icera'),
+  'novatel': enable_plugins_shared.contains('novatel'),
+  'option': enable_plugins_shared.contains('option'),
+  'sierra': enable_plugins_shared.contains('sierra'),
+  'telit': enable_plugins_shared.contains('telit'),
+  'xmm': enable_plugins_shared.contains('xmm'),
+}, section: 'Shared utils')
+
+summary({
+  'altair-lte': enable_plugins.contains('altair-lte'),
+  'anydata': enable_plugins.contains('anydata'),
+  'broadmobi': enable_plugins.contains('broadmobi'),
+  'cinterion': enable_plugins.contains('cinterion'),
+  'dell': enable_plugins.contains('dell'),
+  'dlink': enable_plugins.contains('dlink'),
+  'fibocom': enable_plugins.contains('fibocom'),
+  'foxconn': enable_plugins.contains('foxconn'),
+  'generic': enable_plugins.contains('generic'),
+  'gosuncn': enable_plugins.contains('gosuncn'),
+  'haier': enable_plugins.contains('haier'),
+  'huawei': enable_plugins.contains('huawei'),
+  'iridium': enable_plugins.contains('iridium'),
+  'linktop': enable_plugins.contains('linktop'),
+  'longcheer': enable_plugins.contains('longcheer'),
+  'mbm': enable_plugins.contains('mbm'),
+  'motorola': enable_plugins.contains('motorola'),
+  'mtk': enable_plugins.contains('mtk'),
+  'nokia': enable_plugins.contains('nokia'),
+  'nokia-icera': enable_plugins.contains('nokia-icera'),
+  'novatel': enable_plugins.contains('novatel'),
+  'novatel-lte': enable_plugins.contains('novatel-lte'),
+  'option': enable_plugins.contains('option'),
+  'option-hso': enable_plugins.contains('option-hso'),
+  'pantech': enable_plugins.contains('pantech'),
+  'qcom-soc': enable_plugins.contains('qcom-soc'),
+  'quectel': enable_plugins.contains('quectel'),
+  'samsung': enable_plugins.contains('samsung'),
+  'sierra': enable_plugins.contains('sierra'),
+  'sierra-legacy': enable_plugins.contains('sierra-legacy'),
+  'simtech': enable_plugins.contains('simtech'),
+  'telit': enable_plugins.contains('telit'),
+  'thuraya': enable_plugins.contains('thuraya'),
+  'tplink': enable_plugins.contains('tplink'),
+  'ublox': enable_plugins.contains('ublox'),
+  'via': enable_plugins.contains('via'),
+  'wavecom': enable_plugins.contains('wavecom'),
+  'x22x': enable_plugins.contains('x22x'),
+  'zte': enable_plugins.contains('zte'),
+}, section: 'Plugins')
+
+summary({
+  'gobject introspection': enable_gir,
+  'Man': enable_man,
+  'Documentation': enable_gtk_doc,
+  'bash completion': enable_bash_completion,
+  'vala bindings': enable_vapi,
+  'code coverage': get_option('b_coverage'),
+}, section: 'Miscellaneous')
